# nERD

./: .gitignore  Cargo.toml  README.md  cursive.md
.claude/: settings.local.json
examples/: README.md  draw_entities.rs  foreign_key_lines.rs  grid_layout.rs  simple_tables.rs
nerd-core/: Cargo.toml  README.md
nerd-core/.claude/: PROJECT_PLAN.md
nerd-core/examples/sample_schemas/: blog.sql  ecommerce.sql  library_with_fk.sql
nerd-core/src/: app.rs  main.rs
nerd-core/src/layout/: mod.rs
nerd-core/src/models/: mod.rs
nerd-core/src/parser/: mod.rs
nerd-core/src/render/: mod.rs
nerd-core/src/sync/: mod.rs
src/: app.rs  builder.rs  constants.rs  engine.rs  finder.rs  lib.rs  main.rs  render.rs  sample.rs  ui.rs  util.rs
tests/: e2e_complex_relationships.rs  snapshot_tests.rs
tests/snapshots/: snapshot_tests__complex_foreign_key_relationships.snap  snapshot_tests__complex_schema_rendering.snap  snapshot_tests__foreign_key_rendering.snap  snapshot_tests__foreign_key_rendering.snap.new  snapshot_tests__multiple_tables_rendering.snap  snapshot_tests__self_referencing_table.snap  snapshot_tests__simple_table_rendering.snap  snapshot_tests__table_with_many_columns.snap
